[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/FadeIn-Classic.tscn" type="PackedScene" id=1]
[ext_resource path="res://Backgrounds/ParallaxTemplate.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/FadeOut-Classic.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/tileset-1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Player/obj_Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/macrofagoNPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://Backgrounds/BGOsTemplate.tscn" type="PackedScene" id=7]
[ext_resource path="res://Rooms/macrofagoCutscene01.gd" type="Script" id=8]
[ext_resource path="res://Objects/CutsceneSystem-TextHandler.tscn" type="PackedScene" id=9]
[ext_resource path="res://SFX Files/HD SFX - Macrofago soundbyte.wav" type="AudioStream" id=10]
[ext_resource path="res://Sprites/Resource files/TextBox-Macrofago.tres" type="SpriteFrames" id=11]
[ext_resource path="res://Sprites/Resource files/TextBox-Inverted-Olimac.tres" type="SpriteFrames" id=12]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )
textWriter = NodePath("CutsceneSystem-TextHandler")
portraits = [ ExtResource( 11 ), ExtResource( 12 ) ]
voices = [ ExtResource( 10 ) ]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FadeIn-Classic" parent="CanvasLayer" instance=ExtResource( 1 )]
visible = false

[node name="Sprite" parent="CanvasLayer/FadeIn-Classic" index="0"]
animation = "blue"

[node name="FadeOut" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="Sprite" parent="CanvasLayer/FadeOut" index="0"]
animation = "blue"

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="TileMap" parent="." instance=ExtResource( 4 )]
tile_data = PoolIntArray( -196596, 1, 196608, -196595, 1, 196609, -196594, 1, 196609, -196593, 1, 196609, -196592, 1, 196609, -196591, 1, 196609, -196590, 1, 196609, -196589, 1, 196609, -196588, 1, 196610, -131065, 2, 1, -131064, 2, 65536, -131063, 2, 65536, -131062, 2, 65536, -131061, 2, 65536, -131060, 2, 2, -131052, 2, 1, -131051, 2, 65536, -131050, 2, 65536, -131049, 2, 65536, -131048, 2, 65536, -131047, 2, 65536, -131046, 2, 65536, -131045, 2, 65536, -131044, 2, 65536, -131043, 2, 65536, -131042, 2, 65536, -131041, 2, 65536, -131040, 2, 65536, -131039, 2, 65536, -131038, 2, 65536, -131037, 2, 65536, -131036, 2, 65536, -131035, 2, 65536, -131034, 2, 65536, -131033, 2, 65536, -131032, 2, 65536, -131031, 2, 65536, -131030, 2, 65536, -131029, 2, 65536, -131028, 2, 65536, -131027, 2, 2, -1, 2, 1, -65536, 2, 65536, -65535, 2, 65536, -65534, 2, 65536, -65533, 2, 65536, -65532, 2, 65536, -65531, 2, 65536, -65530, 2, 65536, -65529, 2, 65540, -65528, 2, 196619, -65527, 2, 196619, -65526, 2, 196619, -65525, 2, 196619, -65524, 2, 131074, -65516, 2, 131073, -65515, 2, 196619, -65514, 2, 196619, -65513, 2, 196619, -65512, 2, 196619, -65511, 2, 196619, -65510, 2, 196619, -65509, 2, 196619, -65508, 2, 196619, -65507, 2, 196619, -65506, 2, 196619, -65505, 2, 196619, -65504, 2, 196619, -65503, 2, 196619, -65502, 2, 196619, -65501, 2, 196619, -65500, 2, 196619, -65499, 2, 196619, -65498, 2, 196619, -65497, 2, 196619, -65496, 2, 196619, -65495, 2, 196619, -65494, 2, 196619, -65493, 2, 196619, -65492, 2, 196619, -65491, 2, 131074, 65535, 2, 131073, 0, 2, 196619, 1, 2, 196619, 2, 2, 196619, 3, 2, 196619, 4, 2, 196619, 5, 2, 196619, 6, 2, 196619, 7, 2, 196619, 8, 2, 196619, 9, 2, 196619, 10, 2, 196619, 11, 2, 196619, 12, 2, 131074, 20, 2, 131073, 21, 2, 196619, 22, 2, 196619, 23, 2, 196619, 24, 2, 196619, 25, 2, 196619, 26, 2, 196619, 27, 2, 196619, 28, 2, 196619, 29, 2, 196619, 30, 2, 196619, 31, 2, 196619, 32, 2, 196619, 33, 2, 196619, 34, 2, 196619, 35, 2, 196619, 36, 2, 196619, 37, 2, 196619, 38, 2, 196619, 39, 2, 196619, 40, 2, 196619, 41, 2, 196619, 42, 2, 196619, 43, 2, 196619, 44, 2, 196619, 45, 2, 131074, 131071, 2, 131073, 65536, 2, 196619, 65537, 2, 196619, 65538, 2, 196619, 65539, 2, 196619, 65540, 2, 196619, 65541, 2, 196619, 65542, 2, 196619, 65543, 2, 196619, 65544, 2, 196619, 65545, 2, 196619, 65546, 2, 196619, 65547, 2, 196619, 65548, 2, 131074, 65556, 2, 131073, 65557, 2, 196619, 65558, 2, 196619, 65559, 2, 196619, 65560, 2, 196619, 65561, 2, 196619, 65562, 2, 196619, 65563, 2, 196619, 65564, 2, 196619, 65565, 2, 196619, 65566, 2, 196619, 65567, 2, 196619, 65568, 2, 196619, 65569, 2, 196619, 65570, 2, 196619, 65571, 2, 196619, 65572, 2, 196619, 65573, 2, 196619, 65574, 2, 196619, 65575, 2, 196619, 65576, 2, 196619, 65577, 2, 196619, 65578, 2, 196619, 65579, 2, 196619, 65580, 2, 196619, 65581, 2, 131074, 196607, 2, 131073, 131072, 2, 196619, 131073, 2, 196619, 131074, 2, 196619, 131075, 2, 196619, 131076, 2, 196619, 131077, 2, 196619, 131078, 2, 196619, 131079, 2, 196619, 131080, 2, 196619, 131081, 2, 196619, 131082, 2, 196619, 131083, 2, 196619, 131084, 2, 131074, 131092, 2, 131073, 131093, 2, 196619, 131094, 2, 196619, 131095, 2, 196619, 131096, 2, 196619, 131097, 2, 196619, 131098, 2, 196619, 131099, 2, 196619, 131100, 2, 196619, 131101, 2, 196619, 131102, 2, 196619, 131103, 2, 196619, 131104, 2, 196619, 131105, 2, 196619, 131106, 2, 196619, 131107, 2, 196619, 131108, 2, 196619, 131109, 2, 196619, 131110, 2, 196619, 131111, 2, 196619, 131112, 2, 196619, 131113, 2, 196619, 131114, 2, 196619, 131115, 2, 196619, 131116, 2, 196619, 131117, 2, 131074, 262143, 2, 131073, 196608, 2, 196619, 196609, 2, 196619, 196610, 2, 196619, 196611, 2, 196619, 196612, 2, 196619, 196613, 2, 196619, 196614, 2, 196619, 196615, 2, 196619, 196616, 2, 196619, 196617, 2, 196619, 196618, 2, 196619, 196619, 2, 196619, 196620, 2, 131074, 196628, 2, 131073, 196629, 2, 196619, 196630, 2, 196619, 196631, 2, 196619, 196632, 2, 196619, 196633, 2, 196619, 196634, 2, 196619, 196635, 2, 196619, 196636, 2, 196619, 196637, 2, 196619, 196638, 2, 196619, 196639, 2, 196619, 196640, 2, 196619, 196641, 2, 196619, 196642, 2, 196619, 196643, 2, 196619, 196644, 2, 196619, 196645, 2, 196619, 196646, 2, 196619, 196647, 2, 196619, 196648, 2, 196619, 196649, 2, 196619, 196650, 2, 196619, 196651, 2, 196619, 196652, 2, 196619, 196653, 2, 131074, 327679, 2, 131073, 262144, 2, 196619, 262145, 2, 196619, 262146, 2, 196619, 262147, 2, 196619, 262148, 2, 196619, 262149, 2, 196619, 262150, 2, 196619, 262151, 2, 196619, 262152, 2, 196619, 262153, 2, 196619, 262154, 2, 196619, 262155, 2, 196619, 262156, 2, 131074, 262164, 2, 131073, 262165, 2, 196619, 262166, 2, 196619, 262167, 2, 196619, 262168, 2, 196619, 262169, 2, 196619, 262170, 2, 196619, 262171, 2, 196619, 262172, 2, 196619, 262173, 2, 196619, 262174, 2, 196619, 262175, 2, 196619, 262176, 2, 196619, 262177, 2, 196619, 262178, 2, 196619, 262179, 2, 196619, 262180, 2, 196619, 262181, 2, 196619, 262182, 2, 196619, 262183, 2, 196619, 262184, 2, 196619, 262185, 2, 196619, 262186, 2, 196619, 262187, 2, 196619, 262188, 2, 196619, 262189, 2, 131074, 393215, 2, 131073, 327680, 2, 196619, 327681, 2, 196619, 327682, 2, 196619, 327683, 2, 196619, 327684, 2, 196619, 327685, 2, 196619, 327686, 2, 3, 327687, 2, 131072, 327688, 2, 131072, 327689, 2, 131072, 327690, 2, 131072, 327691, 2, 131072, 327692, 2, 65538, 327700, 2, 131073, 327701, 2, 196619, 327702, 2, 196619, 327703, 2, 196619, 327704, 2, 196619, 327705, 2, 196619, 327706, 2, 196619, 327707, 2, 196619, 327708, 2, 196619, 327709, 2, 196619, 327710, 2, 196619, 327711, 2, 196619, 327712, 2, 196619, 327713, 2, 196619, 327714, 2, 196619, 327715, 2, 196619, 327716, 2, 196619, 327717, 2, 196619, 327718, 2, 196619, 327719, 2, 196619, 327720, 2, 196619, 327721, 2, 196619, 327722, 2, 196619, 327723, 2, 196619, 327724, 2, 196619, 327725, 2, 131074, 458751, 2, 131073, 393216, 2, 196619, 393217, 2, 196619, 393218, 2, 196619, 393219, 2, 196619, 393220, 2, 196619, 393221, 2, 196619, 393222, 2, 131074, 393236, 2, 131073, 393237, 2, 196619, 393238, 2, 196619, 393239, 2, 196619, 393240, 2, 196619, 393241, 2, 196619, 393242, 2, 196619, 393243, 2, 196619, 393244, 2, 196619, 393245, 2, 196619, 393246, 2, 196619, 393247, 2, 196619, 393248, 2, 196619, 393249, 2, 196619, 393250, 2, 196619, 393251, 2, 196619, 393252, 2, 196619, 393253, 2, 196619, 393254, 2, 196619, 393255, 2, 196619, 393256, 2, 196619, 393257, 2, 196619, 393258, 2, 196619, 393259, 2, 196619, 393260, 2, 196619, 393261, 2, 131074, 524287, 2, 131073, 458752, 2, 196619, 458753, 2, 196619, 458754, 2, 196619, 458755, 2, 196619, 458756, 2, 196619, 458757, 2, 196619, 458758, 2, 131074, 458772, 2, 65537, 458773, 2, 131072, 458774, 2, 131072, 458775, 2, 131072, 458776, 2, 131072, 458777, 2, 4, 458778, 2, 196619, 458779, 2, 196619, 458780, 2, 196619, 458781, 2, 196619, 458782, 2, 196619, 458783, 2, 196619, 458784, 2, 196619, 458785, 2, 196619, 458786, 2, 196619, 458787, 2, 196619, 458788, 2, 196619, 458789, 2, 196619, 458790, 2, 196619, 458791, 2, 196619, 458792, 2, 196619, 458793, 2, 196619, 458794, 2, 196619, 458795, 2, 196619, 458796, 2, 196619, 458797, 2, 131074, 589823, 2, 131073, 524288, 2, 196619, 524289, 2, 196619, 524290, 2, 196619, 524291, 2, 196619, 524292, 2, 196619, 524293, 2, 196619, 524294, 2, 131074, 524313, 2, 131073, 524314, 2, 196619, 524315, 2, 196619, 524316, 2, 196619, 524317, 2, 196619, 524318, 2, 196619, 524319, 2, 196619, 524320, 2, 196619, 524321, 2, 196619, 524322, 2, 196619, 524323, 2, 196619, 524324, 2, 196619, 524325, 2, 196619, 524326, 2, 196619, 524327, 2, 196619, 524328, 2, 196619, 524329, 2, 196619, 524330, 2, 196619, 524331, 2, 196619, 524332, 2, 196619, 524333, 2, 131074, 655357, 1, 1, 655358, 1, 2, 655359, 2, 65537, 589824, 2, 131072, 589825, 2, 131072, 589826, 2, 131072, 589827, 2, 131072, 589828, 2, 131072, 589829, 2, 131072, 589830, 2, 65538, 589849, 2, 131073, 589850, 2, 196619, 589851, 2, 196619, 589852, 2, 196619, 589853, 2, 196619, 589854, 2, 196619, 589855, 2, 196619, 589856, 2, 196619, 589857, 2, 196619, 589858, 2, 196619, 589859, 2, 196619, 589860, 2, 196619, 589861, 2, 196619, 589862, 2, 196619, 589863, 2, 196619, 589864, 2, 196619, 589865, 2, 196619, 589866, 2, 196619, 589867, 2, 196619, 589868, 2, 196619, 589869, 2, 131074, 589870, 1, 1, 589871, 1, 2, 720893, 1, 131073, 720894, 1, 131074, 655385, 2, 65537, 655386, 2, 131072, 655387, 2, 131072, 655388, 2, 131072, 655389, 2, 131072, 655390, 2, 131072, 655391, 2, 131072, 655392, 2, 131072, 655393, 2, 131072, 655394, 2, 131072, 655395, 2, 131072, 655396, 2, 131072, 655397, 2, 131072, 655398, 2, 131072, 655399, 2, 131072, 655400, 2, 131072, 655401, 2, 131072, 655402, 2, 131072, 655403, 2, 131072, 655404, 2, 131072, 655405, 2, 65538, 655406, 1, 131073, 655407, 1, 131074, 786429, 1, 131073, 786430, 1, 131074, 720942, 1, 131073, 720943, 1, 131074, 851965, 1, 131073, 851966, 1, 131074, 786478, 1, 131073, 786479, 1, 131074, 917501, 1, 131073, 917502, 1, 131074, 852014, 1, 131073, 852015, 1, 131074, 983037, 1, 131073, 983038, 1, 131074, 917550, 1, 131073, 917551, 1, 131074, 1048573, 1, 131073, 1048574, 1, 131074, 983086, 1, 131073, 983087, 1, 131074, 1114109, 1, 65537, 1114110, 1, 65538, 1114111, 2, 1, 1048576, 2, 65536, 1048577, 2, 65536, 1048578, 2, 65536, 1048579, 2, 65536, 1048580, 2, 65536, 1048581, 2, 65536, 1048582, 2, 65536, 1048583, 2, 65536, 1048584, 2, 65536, 1048585, 2, 65536, 1048586, 2, 65536, 1048587, 2, 65536, 1048588, 2, 65536, 1048589, 2, 65536, 1048590, 2, 65536, 1048591, 2, 65536, 1048592, 2, 65536, 1048593, 2, 65536, 1048594, 2, 65536, 1048595, 2, 65536, 1048596, 2, 65536, 1048597, 2, 65536, 1048598, 2, 65536, 1048599, 2, 65536, 1048600, 2, 65536, 1048601, 2, 65536, 1048602, 2, 65536, 1048603, 2, 65536, 1048604, 2, 65536, 1048605, 2, 65536, 1048606, 2, 65536, 1048607, 2, 65536, 1048608, 2, 65536, 1048609, 2, 65536, 1048610, 2, 65536, 1048611, 2, 65536, 1048612, 2, 65536, 1048613, 2, 65536, 1048614, 2, 65536, 1048615, 2, 65536, 1048616, 2, 65536, 1048617, 2, 65536, 1048618, 2, 65536, 1048619, 2, 65536, 1048620, 2, 65536, 1048621, 2, 2, 1048622, 1, 65537, 1048623, 1, 65538, 1179647, 2, 131073, 1114112, 2, 196619, 1114113, 2, 196619, 1114114, 2, 196619, 1114115, 2, 196619, 1114116, 2, 196619, 1114117, 2, 196619, 1114118, 2, 196619, 1114119, 2, 196619, 1114120, 2, 196619, 1114121, 2, 196619, 1114122, 2, 196619, 1114123, 2, 196619, 1114124, 2, 196619, 1114125, 2, 196619, 1114126, 2, 196619, 1114127, 2, 196619, 1114128, 2, 196619, 1114129, 2, 196619, 1114130, 2, 196619, 1114131, 2, 196619, 1114132, 2, 196619, 1114133, 2, 196619, 1114134, 2, 196619, 1114135, 2, 196619, 1114136, 2, 196619, 1114137, 2, 196619, 1114138, 2, 196619, 1114139, 2, 196619, 1114140, 2, 196619, 1114141, 2, 196619, 1114142, 2, 196619, 1114143, 2, 196619, 1114144, 2, 196619, 1114145, 2, 196619, 1114146, 2, 196619, 1114147, 2, 196619, 1114148, 2, 196619, 1114149, 2, 196619, 1114150, 2, 196619, 1114151, 2, 196619, 1114152, 2, 196619, 1114153, 2, 196619, 1114154, 2, 196619, 1114155, 2, 196619, 1114156, 2, 196619, 1114157, 2, 131074, 1245183, 2, 131073, 1179648, 2, 196619, 1179649, 2, 196619, 1179650, 2, 196619, 1179651, 2, 196619, 1179652, 2, 196619, 1179653, 2, 196619, 1179654, 2, 196619, 1179655, 2, 196619, 1179656, 2, 196619, 1179657, 2, 196619, 1179658, 2, 196619, 1179659, 2, 196619, 1179660, 2, 196619, 1179661, 2, 196619, 1179662, 2, 196619, 1179663, 2, 196619, 1179664, 2, 196619, 1179665, 2, 196619, 1179666, 2, 196619, 1179667, 2, 196619, 1179668, 2, 196619, 1179669, 2, 196619, 1179670, 2, 196619, 1179671, 2, 196619, 1179672, 2, 196619, 1179673, 2, 196619, 1179674, 2, 196619, 1179675, 2, 196619, 1179676, 2, 196619, 1179677, 2, 196619, 1179678, 2, 196619, 1179679, 2, 196619, 1179680, 2, 196619, 1179681, 2, 196619, 1179682, 2, 196619, 1179683, 2, 196619, 1179684, 2, 196619, 1179685, 2, 196619, 1179686, 2, 196619, 1179687, 2, 196619, 1179688, 2, 196619, 1179689, 2, 196619, 1179690, 2, 196619, 1179691, 2, 196619, 1179692, 2, 196619, 1179693, 2, 131074, 1310719, 2, 131073, 1245184, 2, 196619, 1245185, 2, 196619, 1245186, 2, 196619, 1245187, 2, 196619, 1245188, 2, 196619, 1245189, 2, 196619, 1245190, 2, 196619, 1245191, 2, 196619, 1245192, 2, 196619, 1245193, 2, 196619, 1245194, 2, 196619, 1245195, 2, 196619, 1245196, 2, 196619, 1245197, 2, 196619, 1245198, 2, 196619, 1245199, 2, 196619, 1245200, 2, 196619, 1245201, 2, 196619, 1245202, 2, 196619, 1245203, 2, 196619, 1245204, 2, 196619, 1245205, 2, 196619, 1245206, 2, 196619, 1245207, 2, 196619, 1245208, 2, 196619, 1245209, 2, 196619, 1245210, 2, 196619, 1245211, 2, 196619, 1245212, 2, 196619, 1245213, 2, 196619, 1245214, 2, 196619, 1245215, 2, 196619, 1245216, 2, 196619, 1245217, 2, 196619, 1245218, 2, 196619, 1245219, 2, 196619, 1245220, 2, 196619, 1245221, 2, 196619, 1245222, 2, 196619, 1245223, 2, 196619, 1245224, 2, 196619, 1245225, 2, 196619, 1245226, 2, 196619, 1245227, 2, 196619, 1245228, 2, 196619, 1245229, 2, 131074, 1376255, 2, 65537, 1310720, 2, 131072, 1310721, 2, 131072, 1310722, 2, 131072, 1310723, 2, 131072, 1310724, 2, 131072, 1310725, 2, 131072, 1310726, 2, 131072, 1310727, 2, 131072, 1310728, 2, 131072, 1310729, 2, 131072, 1310730, 2, 131072, 1310731, 2, 131072, 1310732, 2, 131072, 1310733, 2, 131072, 1310734, 2, 131072, 1310735, 2, 131072, 1310736, 2, 131072, 1310737, 2, 131072, 1310738, 2, 131072, 1310739, 2, 131072, 1310740, 2, 131072, 1310741, 2, 131072, 1310742, 2, 131072, 1310743, 2, 131072, 1310744, 2, 131072, 1310745, 2, 131072, 1310746, 2, 131072, 1310747, 2, 131072, 1310748, 2, 131072, 1310749, 2, 131072, 1310750, 2, 131072, 1310751, 2, 131072, 1310752, 2, 131072, 1310753, 2, 131072, 1310754, 2, 131072, 1310755, 2, 131072, 1310756, 2, 131072, 1310757, 2, 131072, 1310758, 2, 131072, 1310759, 2, 131072, 1310760, 2, 131072, 1310761, 2, 131072, 1310762, 2, 131072, 1310763, 2, 131072, 1310764, 2, 131072, 1310765, 2, 65538 )

[node name="obj_Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 496, 464 )

[node name="AnimatedSprite" parent="obj_Player" index="1"]
frame = 5

[node name="Camera2D" parent="obj_Player" index="3"]
limit_left = 0
limit_top = 0
limit_right = 1408
limit_bottom = 576

[node name="macrofagoNPC" parent="." instance=ExtResource( 6 )]
position = Vector2( -40, 464 )

[node name="BGOs" parent="." instance=ExtResource( 7 )]

[node name="TileMap" parent="BGOs" index="0"]
tile_data = PoolIntArray( 17, 12, 0, 65553, 12, 0, 131089, 12, 0, 196625, 12, 0, 262161, 12, 0, 327697, 12, 0, 393224, 15, 0, 393227, 1, 0, 393233, 12, 0, 458769, 12, 0, 524305, 12, 0, 524311, 1, 0, 589841, 12, 0, 655363, 4, 0, 655364, 8, 0, 655377, 12, 0, 720899, 5, 0, 720913, 12, 0, 720922, 22, 0, 720934, 5, 0, 786435, 5, 0, 786447, 14, 0, 786449, 12, 0, 786458, 12, 0, 786465, 3, 0, 786470, 5, 0, 851971, 5, 0, 851985, 12, 0, 851994, 12, 0, 852006, 5, 0, 917507, 5, 0, 917510, 9, 0, 917514, 11, 0, 917521, 12, 0, 917525, 7, 0, 917530, 12, 0, 917532, 9, 0, 917542, 5, 0, 983043, 6, 0, 983057, 12, 0, 983066, 13, 0, 983078, 5, 0 )

[node name="CutsceneSystem-TextHandler" parent="." instance=ExtResource( 9 )]

[editable path="CanvasLayer/FadeIn-Classic"]

[editable path="CanvasLayer/FadeOut"]

[editable path="obj_Player"]

[editable path="BGOs"]
